<?xml version="1.0"?>
<package format="2">
  <name>hrii_vo</name>
  <version>0.0.1</version>
  <description>three_directional_planar</description>

  <maintainer email="hamidreza.raei@iit.it">Hamidreza Raei</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>actionlib</depend>

  <depend>move_base_msgs</depend>

  <depend>hrii_robot_msgs</depend>
  <depend>hrii_gri_interface</depend>
  <depend>hrii_utils</depend>
  <depend>hrii_trajectory_planner</depend>
  
</package>
